<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150dp"
            android:fontFamily="@font/nunito_sans_extrabold"
            android:shadowColor="#000000"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="10"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="50"
                android:background="@android:color/transparent"
                android:fontFamily="@font/nunito_sans_extrabold"
                android:hint="@string/first_name"
                android:shadowColor="#000000"
                android:shadowDx="10"
                android:shadowDy="10"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="50"
                android:background="@android:color/transparent"
                android:fontFamily="@font/nunito_sans_extrabold"
                android:hint="@string/first_name"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/nunito_sans_extrabold"
            android:hint="@string/email_address"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

           <EditText
               android:id="@+id/dob"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:layout_weight="50"
               android:background="@android:color/transparent"
               android:fontFamily="@font/nunito_sans_extrabold"
               android:hint="@string/date_of_birth"
               android:textColor="@android:color/white"
               android:textColorHint="@android:color/white" />

           <ImageView
               android:id="@+id/addDate"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:layout_weight="50"
               android:src="@drawable/ic_add_black_24dp"
               app:tint="@android:color/white" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="50"
                android:background="@android:color/transparent"
                android:fontFamily="@font/nunito_sans_extrabold"
                android:hint="@string/phone_number"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

           <Spinner
               android:id="@+id/phoneCategory"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:layout_weight="50" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:background="@android:color/transparent"
                android:fontFamily="@font/nunito_sans_extrabold"
                android:hint="@string/password"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:background="@android:color/transparent"
                android:fontFamily="@font/nunito_sans_extrabold"
                android:hint="@string/confirm_password"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

        </LinearLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/nunito_sans_extrabold"
            android:text="@string/agree_to_terms_and_conditions"
            android:textColor="@android:color/white" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/nunito_sans_extrabold"
                android:text="@string/register_U"
                android:textColor="@android:color/black" />

        </RelativeLayout>
    </LinearLayout>

</FrameLayout>